Add email and new version cv

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
               <a href="https://github.com/JEduardo001" target="_blank"><i class="fab fa-github"></i> GitHub</a>
               <a href="https://www.linkedin.com/in/eduardo-arce-129388335/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
               <a href="CV-JOSE-QUIRARTE.pdf" download class="cv-button"><i class="fas fa-file-download"></i> Descargar CV</a>
+              <a href="mailto:eduardoarce773@email.com"><i class="fas fa-at"></i>eduardoarce773@gmail.com</a>
             </div>
         </div>
     </header>
