fix route image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </p>
 
                 <div class="architecture-diagram-container">
-                    <img src="diagrama.png" alt="Flujo de Microservicios" class="architecture-img">
+                    <img src="Diagrama.png" alt="Flujo de Microservicios" class="architecture-img">
                     <p class="img-caption">Diagrama de flujo de conexión. Más diagramas de procesos en repositorio</p>
                 </div>
                 
